# 3d-renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  SConstruct  compile_flags.txt  scene.gltf  shader_gen.py
.github/workflows/: cmake-multi-platform.yml
shaders/: shader.frag  shader.vert
src/: app.cpp  app.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  image.cpp  image.h  loader.cpp  loader.h  main.cpp  mesh.h  rendering_device.cpp  rendering_device.h  time.h  types.h  vk_engine.cpp  vk_engine.h  vk_mesh.cpp  vk_mesh.h  vk_shader.cpp  vk_shader.h  vk_types.h  vulkan_context.cpp  vulkan_context.h
src/rendering/: camera.h  renderer.cpp  renderer.h  rendering_device.cpp  rendering_device.h  vertex.h  vulkan_context.cpp  vulkan_context.h
src/rendering/shaders/: material.glsl  shader_rd.cpp  tonemapping.glsl
src/shaders/: shader_rd.h
